--- a/Class_Page_V2.1/stylesheet.css
+++ b/Class_Page_V2.1/stylesheet.css
@@ -52,6 +52,7 @@ li {
   color:rgba(255,255,255,0.85);
 border-style: ridge;
 border-width: 20px;
+border-collapse: collapse;
 border-radius: 10px;
 padding-top: 20px;
 padding-bottom: 20px;
