--- a/better-clock-V-0-0/style.css
+++ b/better-clock-V-0-0/style.css
@@ -1,16 +1,68 @@
 body {
-    background-color: #80d4ea;
+  width: 100vw;
+  height: 100vh;
 }
-#clock {
-    height: 100px;
-    width: 800px;
+#clockny {
+    background-color: #80d4ea;
+    height: 25vh;
+    width: 100vw;
     margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
-    padding-top: 70px;
+
+    padding: 70px;
     font-family: courier, monospace;
     text-align: center;
     color: white;
-    font-size: 100px;
+    font-size: 10vw;
 }
-© 2019 GitHub, Inc.
+#clockla {
+  background-color: #ffca38;
+    height: 25vh;
+    width: 100vw;
+    margin: auto;
+    top: 0; left: 0; bottom: 0; right: 0;
+    padding: 70px;
+    font-family: courier, monospace;
+    text-align: center;
+    color: white;
+    font-size: 10vw;
+}
+#clocktelaviv {
+    background-color: #b3ffc3;
+    height: 25vh;
+    width: 100vw;
+    margin: auto;
+    top: 0; left: 0; bottom: 0; right: 0;
+    padding: 70px;
+    font-family: courier, monospace;
+    text-align: center;
+    color: white;
+    font-size: 10vw;
+}
+#clockrio {
+    background-color: #c2b3ff;
+    height: 25vh;
+    width: 100vw;
+    margin: auto;
+    top: 0; left: 0; bottom: 0; right: 0;
+    padding: 70px;
+    font-family: courier, monospace;
+    text-align: center;
+    color: white;
+    font-size: 10vw;
+}
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.flex-container > div {
+  color: white;
+  width: 100vw;
+  margin: 25vh;
+  text-align: center;
+  line-height: 75px;
+  font-size: 10vw;
+  background-size: 100vw;
+}
