--- a/better-clock-V-0-0/style.css
+++ b/better-clock-V-0-0/style.css
@@ -6,49 +6,45 @@ body {
     background-color: #80d4ea;
     height: 25vh;
     width: 100vw;
-    margin: auto;
-
+    margin: 50px;
     padding: 70px;
     font-family: courier, monospace;
     text-align: center;
     color: white;
-    font-size: 10vw;
+    font-size: 7.5vw;
 }
 #clockla {
   background-color: #ffca38;
     height: 25vh;
     width: 100vw;
-    margin: auto;
-    top: 0; left: 0; bottom: 0; right: 0;
+    margin: 50px;
     padding: 70px;
     font-family: courier, monospace;
     text-align: center;
     color: white;
-    font-size: 10vw;
+    font-size: 7.5vw;
 }
 #clocktelaviv {
     background-color: #b3ffc3;
     height: 25vh;
     width: 100vw;
-    margin: auto;
-    top: 0; left: 0; bottom: 0; right: 0;
+    margin: 50px;
     padding: 70px;
     font-family: courier, monospace;
     text-align: center;
     color: white;
-    font-size: 10vw;
+    font-size: 7.5vw;
 }
 #clockrio {
     background-color: #c2b3ff;
     height: 25vh;
     width: 100vw;
-    margin: auto;
-    top: 0; left: 0; bottom: 0; right: 0;
+    margin: 50px;
     padding: 70px;
     font-family: courier, monospace;
     text-align: center;
     color: white;
-    font-size: 10vw;
+    font-size: 7.5vw;
 }
 .flex-container {
   display: flex;
@@ -60,9 +56,11 @@ body {
 .flex-container > div {
   color: white;
   width: 100vw;
-  margin: 25vh;
-  text-align: center;
-  line-height: 75px;
-  font-size: 10vw;
+  margin:10vh;
+  padding: 25px;
+  justify-content: center;
+  align-items: center;
+  line-height: 100px;
+  font-size: 7.5vw;
   background-size: 100vw;
 }
